# nlp_100_exercise_2025

./: .env.example  .gitignore  pyproject.toml
answers/: ch01.py  ch02.py  ch03.py  ch05.py
tools/: modify.py
