[project]
name = "nlp-100-exercise-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.4.0",
    "langchain>=1.0.8",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "marimo>=0.18.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.6",
]
